--- a/mediatrack_app/templates/mediatrack_app/dashboard.html
+++ b/mediatrack_app/templates/mediatrack_app/dashboard.html
@@ -1,4 +1,5 @@
 {% extends 'mediatrack_app/base.html' %}
+{% load mediatrack_app_filters %}
 
 {% block title %}Dashboard - MediaTrack{% endblock %}
 
@@ -30,7 +31,7 @@
                                     </p>
                                 {% elif medio.tipo == 'pelicula' %}
                                     <p class="card-text">
-                                        <strong>Duración:</strong> {{ medio.duracion_minutos }} minutos
+                                        <strong>Duración:</strong> {{ medio.duracion_minutos|minutes_to_hh_mm }} (HH:MM)
                                     </p>
                                 {% endif %}
 
