--- a/mediatrack_app/templates/mediatrack_app/medio_form.html
+++ b/mediatrack_app/templates/mediatrack_app/medio_form.html
@@ -1,4 +1,5 @@
 {% extends 'mediatrack_app/base.html' %}
+{% load mediatrack_app_filters %}
 
 {% block title %}{{ accion }} Medio - MediaTrack{% endblock %}
 
@@ -17,7 +18,7 @@
                     <div class="mb-3">
                         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
                         {{ field.errors }}
-                        {{ field }}
+                        {{ field }} 
                         {% if field.help_text %}
                         <div class="form-text">{{ field.help_text }}</div>
                         {% endif %}
@@ -38,16 +39,18 @@ function toggleFields() {
     const tipoSelect = document.querySelector('#id_tipo');
     const capitulosField = document.querySelector('#id_total_capitulos').parentElement;
     const duracionField = document.querySelector('#id_duracion_minutos').parentElement;
+    const duracionHHMMField = document.querySelector('#id_duracion_hh_mm').parentElement;
     
     // Ocultar ambos campos primero
     capitulosField.style.display = 'none';
     duracionField.style.display = 'none';
-    
+    duracionHHMMField.style.display = 'none';
+
     // Mostrar el campo correspondiente según el tipo
     if (tipoSelect.value === 'serie' || tipoSelect.value === 'anime') {
         capitulosField.style.display = 'block';
     } else if (tipoSelect.value === 'pelicula') {
-        duracionField.style.display = 'block';
+        duracionHHMMField.style.display = 'block';
     }
 }
 
